[gd_scene load_steps=2 format=3 uid="uid://c4itkcu7ufe5j"]

[ext_resource type="Script" uid="uid://delu7kfefwd5r" path="res://ui/Succession_Crisis_UI.gd" id="1_e844v"]

[node name="Succession_Crisis_UI" type="CanvasLayer"]
script = ExtResource("1_e844v")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.5
offset_top = -151.0
offset_right = 255.5
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Succession Crisis"

[node name="DescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "The Jarl is dead. Your rule is fragile..."

[node name="LegitimacyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Legitimacy: 20/100"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RenownTaxTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Legacy Projects"

[node name="RenownTaxDescription" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pay 50 Renown to protect your legacy, or refuse and risk setbacks."

[node name="RenownTaxButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PayRenownButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/RenownTaxButtons"]
layout_mode = 2
toggle_mode = true
text = "Pay Renown"

[node name="RefuseRenownButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/RenownTaxButtons"]
layout_mode = 2
toggle_mode = true
text = "Refuse"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GoldTaxTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Garrison Stability"

[node name="GoldTaxDescription" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pay 1000 Gold to ensure loyalty, or refuse and risk instability."

[node name="GoldTaxButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PayGoldButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GoldTaxButtons"]
layout_mode = 2
toggle_mode = true
text = "Pay Gold"

[node name="RefuseGoldButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GoldTaxButtons"]
layout_mode = 2
toggle_mode = true
text = "Refuse"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm"
